--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
 </head>
 <body>
     <div class="container">
-        
+        <img src="server_maintenance.png" alt="Under Maintenance">
         <h1>Website Under Maintenance</h1>
         <p>We apologize for the inconvenience. Our website is currently undergoing scheduled maintenance. Please check back later.</p>
+    #Digital Piranti Team#
     </div>
 </body>
 </html>
